feat: user mutes
